# arg_project

./: .env.example  .env.local.example  .env.prod.example  .env.test.example  .gitignore
infra/: README.md  (+1 more)
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/: diagnostics.py  document_batches.py  documents.py  ingestion.py  jobs.py  metrics.py  runtime_config.py  search.py
services/api/app/core/: __init__.py  api_metrics.py  config.py  errors.py  request_context.py
services/api/app/db/: session.py
services/api/app/embeddings/: embedding_client.py
services/api/app/infra/: __init__.py  mq.py  object_store.py  vector_store.py
services/api/app/rerank/: rerank_client.py
services/api/app/services/: diagnostics_service.py  document_batch_service.py  document_service.py  ingestion_service.py  job_service.py  search_service.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial_schema.py  0002_add_cleaning_job_retry_count.py  0003_add_knowledge_base_id.py  0004_add_text_chunk_fts_index.py  0005_add_permission_tags.py  0006_add_document_deleted_at.py  0007_add_document_audit_event.py  0008_add_document_operation_lock.py  0009_add_cleaning_job_retry_link.py  0010_add_search_diagnostic_event.py  0011_document_operation_batch.py
services/reranker/: Dockerfile  pyproject.toml
services/reranker/app/: __init__.py  main.py
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: __init__.py  main.py
services/worker/app/chunkers/: __init__.py  paragraph_chunker.py
services/worker/app/cleaners/: __init__.py
services/worker/app/consumers/: __init__.py  cleaning_consumer.py
services/worker/app/core/: __init__.py  config.py
services/worker/app/db/: session.py
(+99 files in other folders)
