[project]
name = "rag-cleaning-api"
version = "0.1.0"
description = "FastAPI control plane for data cleaning and RAG MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pika>=1.3.0",
  "minio>=7.2.0",
  "qdrant-client>=1.10.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "alembic>=1.13.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
