[project]
name = "rag-bge-reranker"
version = "0.1.0"
description = "Local BGE reranker service compatible with the RAG API external rerank contract"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sentence-transformers>=3.0.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
