[project]
name = "rag-cleaning-worker"
version = "0.1.0"
description = "Python worker for data cleaning and RAG MVP"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pika>=1.3.0",
  "minio>=7.2.0",
  "qdrant-client>=1.10.0",
  "httpx>=0.27.0",
  "pypdf>=4.3.0",
  "pandas>=2.2.0",
  "python-docx>=1.1.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
